# advent-of-fpga-2025-hardcaml

./: .gitignore  Dockerfile  LICENSE.md  README.md  TODO.md  hardcaml_template_project.opam
.devcontainer/: devcontainer.json
src/: day1.ml  day1.mli  digit_parser.ml  digit_parser.mli
test/: test_day1.ml  test_digit_parser.ml  test_range_finder.ml
test_inputs/: .gitignore
