opam-version: "2.0"
maintainer: "Venkat Rao"
authors: ["Jane Street Group, LLC", "Venkat Rao"]
homepage: "https://github.com/venkatrao1/advent-of-fpga-2025-hardcaml"
bug-reports: "https://github.com/venkatrao1/advent-of-fpga-2025-hardcaml/issues"
dev-repo: "git+https://github.com/venkatrao1/advent-of-fpga-2025-hardcaml.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_template_project/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "dune" {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Advent of Code 2025 solutions in Hardcaml"
description: "
Advent of Code 2025 solutions in Hardcaml.
"
